# ort-inference-ner

./: Cargo.toml  env.yaml
src/: hf.py  main.rs  pipelines.py
src/python/: baseline.py  ort-hf.py  pipelines.py
src/python/inference/: __init__.py
