[package]
name = "onnxruntime-ner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
ndarray = "0.15.1"
ndarray-stats = "0.5.1"
onnxruntime = "0.0.14"
rust_tokenizers = "8.1.1"
thiserror = "1.0.50"
