[package]
name = "onnxruntime-ner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
ndarray = "0.15.1"
ndarray-stats = "0.5.1"
ort = { version = "2.0.0-alpha.2", features = ["ndarray", "half", "download-binaries", "copy-dylibs", "cuda"] }
rayon = "1.8.0"
rust_tokenizers = "8.1.1"
serde = "1.0.193"
serde_json = "1.0.108"
thiserror = "1.0.50"
